# convolver

./: .gitignore  Cargo.toml  README.md  convert.py  execute.bat  rustfmt.toml  test.bat
.cargo/: config.toml
src/: add.rs  colormode.rs  convolve.rs  function.rs  io.rs  main.rs  matrix.rs  matrix_rules.rs  neighbors.rs  sum.rs
