[package]
name = "convolver"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
fast-math = "0.1.1"
lazy_static = "1.5.0"
mimalloc = "0.1.46"
palette = "0.7.6"
png = "0.17.16"
rayon = "1.10.0"

[profile.release]
incremental = true
lto = true
panic = "abort"

[profile.analyze]
inherits = "release"
debug = true
lto = false
